Regression: Editor Type Button always appears in a single column #116471

Closed
opened 2023-12-22 17:58:34 +01:00 by Charles Wardlaw · 3 comments

System Information
Operating system: Sonoma 14.2
Graphics card: M3 Max 40 Core

Blender Version
Broken: 4.1 (build from main as of 22 Dec)
Worked: perhaps a month or two ago

Opening the Editor Type menu now presents the menu in a long single column. This is fine when the button is at the top of the Blender window, but if you split areas then you end up always scrolling.

This is a regression in usability, especially for laptop users. It seems to be related to #115275

I've attached two images of the issue, and one of how it was before, which was much preferred. If this was an intentional change and not a bug, please revert the commit.

**System Information** Operating system: Sonoma 14.2 Graphics card: M3 Max 40 Core **Blender Version** Broken: 4.1 (build from main as of 22 Dec) Worked: perhaps a month or two ago Opening the Editor Type menu now presents the menu in a long single column. This is fine when the button is at the top of the Blender window, but if you split areas then you end up always scrolling. This is a regression in usability, especially for laptop users. It seems to be related to https://projects.blender.org/blender/blender/issues/115275 I've attached two images of the issue, and one of how it was before, which was much preferred. If this was an intentional change and not a bug, please revert the commit.
Charles Wardlaw added the
Severity
Normal
Status
Needs Triage
Type
Report
labels 2023-12-22 17:58:35 +01:00

I suspect this works:

diff --git a/source/blender/editors/interface/interface.cc b/source/blender/editors/interface/interface.cc
index 749cd6e..bba3a09 100644
--- a/source/blender/editors/interface/interface.cc
+++ b/source/blender/editors/interface/interface.cc
@@ -4377,7 +4377,7 @@ static void ui_def_but_rna__menu(bContext *C, uiLayout *layout, void *but_p)
   }
 
   /* If the estimated width is greater than available size, collapse to one column. */
-  if (columns > 1 && text_width > win->sizex) {
+  if (columns > 1 && text_width > WM_window_pixels_x(win)) {
     columns = 1;
     rows = totitems;
   }
I suspect this works: ``` diff --git a/source/blender/editors/interface/interface.cc b/source/blender/editors/interface/interface.cc index 749cd6e..bba3a09 100644 --- a/source/blender/editors/interface/interface.cc +++ b/source/blender/editors/interface/interface.cc @@ -4377,7 +4377,7 @@ static void ui_def_but_rna__menu(bContext *C, uiLayout *layout, void *but_p) } /* If the estimated width is greater than available size, collapse to one column. */ - if (columns > 1 && text_width > win->sizex) { + if (columns > 1 && text_width > WM_window_pixels_x(win)) { columns = 1; rows = totitems; } ```
Author
Member

Adding some more:

  • My resolution scale is 1.25 normally. At 1.0, I get the old menu behaviour when the window is nearly full screen.

  • Shrinking the window at all on the X axis returns the menu to narrow.

Adding some more: - My resolution scale is 1.25 normally. At 1.0, I get the old menu behaviour when the window is nearly full screen. - Shrinking the window at all on the X axis returns the menu to narrow.
Member

Yes, that makes perfect sense. Not the first time I have forgotten to consider that win->sizex is off on Mac high DPI.

Yes, that makes perfect sense. Not the first time I have forgotten to consider that win->sizex is off on Mac high DPI.
Blender Bot added
Status
Resolved
and removed
Status
Needs Triage
labels 2023-12-22 18:34:38 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Code Documentation
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#116471
No description provided.