Fix #116471: some menus incorrectly display vertical on macOS

Take into account retina pixel size for estimating window width when
checking if the menu fits.